use <pre> to display time in report.html

--- a/report.html
+++ b/report.html
@@ -5,4 +5,37 @@
             <th>Java</th>
             <th>Cpp</th>
             <th>C</th>
-        </tr> <tr> <td>1</td> <td>real	0m0.026s<br>user	0m0.021s<br>sys	0m0.004s<br></td> <td>real	0m0.070s<br>user	0m0.048s<br>sys	0m0.017s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.001s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></td> </tr> <tr> <td>2</td> <td>real	0m0.025s<br>user	0m0.022s<br>sys	0m0.003s<br></td> <td>real	0m0.071s<br>user	0m0.050s<br>sys	0m0.015s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.001s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></td> </tr> <tr> <td>3</td> <td>real	0m0.026s<br>user	0m0.020s<br>sys	0m0.005s<br></td> <td>real	0m0.067s<br>user	0m0.049s<br>sys	0m0.016s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.001s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></td> </tr> <tr> <td>4</td> <td>real	0m0.028s<br>user	0m0.023s<br>sys	0m0.003s<br></td> <td>real	0m0.079s<br>user	0m0.052s<br>sys	0m0.023s<br></td> <td>real	0m0.001s<br>user	0m0.001s<br>sys	0m0.000s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></td> </tr> <tr> <td>5</td> <td>real	0m0.026s<br>user	0m0.023s<br>sys	0m0.002s<br></td> <td>real	0m0.068s<br>user	0m0.047s<br>sys	0m0.019s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.001s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></td> </tr> <tr> <td>6</td> <td>real	0m0.026s<br>user	0m0.021s<br>sys	0m0.004s<br></td> <td>real	0m0.068s<br>user	0m0.050s<br>sys	0m0.016s<br></td> <td>real	0m0.001s<br>user	0m0.001s<br>sys	0m0.000s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></td> </tr> <tr> <td>7</td> <td>real	0m0.279s<br>user	0m0.277s<br>sys	0m0.002s<br></td> <td>real	0m0.088s<br>user	0m0.074s<br>sys	0m0.020s<br></td> <td>real	0m0.007s<br>user	0m0.005s<br>sys	0m0.001s<br></td> <td>real	0m0.006s<br>user	0m0.006s<br>sys	0m0.000s<br></td> </tr> <tr> <td>8</td> <td>real	0m0.027s<br>user	0m0.022s<br>sys	0m0.004s<br></td> <td>real	0m0.068s<br>user	0m0.049s<br>sys	0m0.017s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.001s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></td> </tr> <tr> <td>9</td> <td>real	0m0.051s<br>user	0m0.037s<br>sys	0m0.013s<br></td> <td>real	0m0.070s<br>user	0m0.054s<br>sys	0m0.013s<br></td> <td>real	0m0.001s<br>user	0m0.001s<br>sys	0m0.000s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></td> </tr> <tr> <td>10</td> <td>real	0m0.485s<br>user	0m0.458s<br>sys	0m0.026s<br></td> <td>real	0m0.189s<br>user	0m0.197s<br>sys	0m0.035s<br></td> <td>real	0m0.160s<br>user	0m0.147s<br>sys	0m0.001s<br></td> <td>real	0m0.033s<br>user	0m0.028s<br>sys	0m0.004s<br></td> </tr> <tr> <td>11</td> <td>real	0m0.029s<br>user	0m0.024s<br>sys	0m0.004s<br></td> <td>real	0m0.117s<br>user	0m0.099s<br>sys	0m0.028s<br></td> <td>real	0m0.001s<br>user	0m0.001s<br>sys	0m0.000s<br></td> <td>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></td> </tr> </table>
+        </tr> <tr> <td>1</td> <td><pre>
+real	0m0.026s
+user	0m0.023s
+sys	0m0.002s</pre></td> <td><pre>real	0m0.067s<br>user	0m0.045s<br>sys	0m0.020s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.001s<br>sys	0m0.000s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></pre></td> </tr> <tr> <td>2</td> <td><pre>
+real	0m0.025s
+user	0m0.021s
+sys	0m0.003s</pre></td> <td><pre>real	0m0.066s<br>user	0m0.044s<br>sys	0m0.020s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.001s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></pre></td> </tr> <tr> <td>3</td> <td><pre>
+real	0m0.025s
+user	0m0.021s
+sys	0m0.003s</pre></td> <td><pre>real	0m0.066s<br>user	0m0.044s<br>sys	0m0.020s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.001s<br>sys	0m0.000s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></pre></td> </tr> <tr> <td>4</td> <td><pre>
+real	0m0.025s
+user	0m0.020s
+sys	0m0.005s</pre></td> <td><pre>real	0m0.074s<br>user	0m0.051s<br>sys	0m0.021s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.001s<br>sys	0m0.000s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></pre></td> </tr> <tr> <td>5</td> <td><pre>
+real	0m0.025s
+user	0m0.021s
+sys	0m0.003s</pre></td> <td><pre>real	0m0.066s<br>user	0m0.047s<br>sys	0m0.017s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.001s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></pre></td> </tr> <tr> <td>6</td> <td><pre>
+real	0m0.025s
+user	0m0.020s
+sys	0m0.004s</pre></td> <td><pre>real	0m0.067s<br>user	0m0.042s<br>sys	0m0.023s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.001s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></pre></td> </tr> <tr> <td>7</td> <td><pre>
+real	0m0.276s
+user	0m0.273s
+sys	0m0.002s</pre></td> <td><pre>real	0m0.086s<br>user	0m0.078s<br>sys	0m0.015s<br></pre></td> <td><pre>real	0m0.007s<br>user	0m0.005s<br>sys	0m0.001s<br></pre></td> <td><pre>real	0m0.006s<br>user	0m0.005s<br>sys	0m0.000s<br></pre></td> </tr> <tr> <td>8</td> <td><pre>
+real	0m0.026s
+user	0m0.023s
+sys	0m0.003s</pre></td> <td><pre>real	0m0.067s<br>user	0m0.042s<br>sys	0m0.022s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.001s<br>sys	0m0.000s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></pre></td> </tr> <tr> <td>9</td> <td><pre>
+real	0m0.049s
+user	0m0.037s
+sys	0m0.011s</pre></td> <td><pre>real	0m0.066s<br>user	0m0.043s<br>sys	0m0.021s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.001s<br>sys	0m0.000s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></pre></td> </tr> <tr> <td>10</td> <td><pre>
+real	0m0.449s
+user	0m0.430s
+sys	0m0.018s</pre></td> <td><pre>real	0m0.178s<br>user	0m0.196s<br>sys	0m0.036s<br></pre></td> <td><pre>real	0m0.143s<br>user	0m0.141s<br>sys	0m0.002s<br></pre></td> <td><pre>real	0m0.032s<br>user	0m0.027s<br>sys	0m0.004s<br></pre></td> </tr> <tr> <td>11</td> <td><pre>
+real	0m0.027s
+user	0m0.021s
+sys	0m0.005s</pre></td> <td><pre>real	0m0.111s<br>user	0m0.105s<br>sys	0m0.020s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.001s<br>sys	0m0.000s<br></pre></td> <td><pre>real	0m0.001s<br>user	0m0.000s<br>sys	0m0.000s<br></pre></td> </tr> </table>
